# CN_Lab

./: CMakeLists.txt  test.c
Lab_01/: 1.1.c  1.2.c  1.3.c  1.4.c  1.5.c  a.out
Lab_02/: 2.1.c  2.2.c  2.3.c  Endianness.c  a.out  client  client.c  server  server.c  tcp_client.c  tcp_server.c
Lab_03/: tcp_client.c  test.c  udp_client.c
Lab_04/: chat_client  chat_client.c  chat_server  chat_server.c  sort_client  sort_client.c  sort_server  sort_server.c  udp_server.c
Lab_05/: client  file_download_client.c  file_transfer_server.c  server
Lab_07/: client  salary_client  salary_client.c  salary_server  salary_server.c  server
